# scrapbox-haskell

./: CHANGELOG.md  README.md  hie.yaml  scrapbox-haskell.cabal
.github/workflows/: haskell.yml
src/Scrapbox/: Data.hs  Request.hs
src/Scrapbox/Data/: Pages.hs
src/Scrapbox/Endpoints/: Pages.hs
test/: MyLibSpec.hs
