cabal-version:      2.4
name:               scrapbox-haskell
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             unvalley
maintainer:         kirohi.code@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  build-depends:    base ^>=4.14.2.0
  default-language: Haskell2010

common test-depends
  build-depends: hspec ^>=2.7.4
  build-tool-depends: hspec-discover:hspec-discover

library
  import:           shared-properties
  -- cabal-fmt: expand src
  exposed-modules:  MyLib

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.2.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable scrapbox-haskell
  import:           shared-properties
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base              ^>=4.14.2.0
    , scrapbox-haskell

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite scrapbox-haskell-test
  import:           shared-properties, test-depends
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs

  -- cabal-fmt: expand test -Spec
  other-modules:    MyLibSpec
  build-depends:    scrapbox-haskell
